--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         <i class="fa-solid fa-user"></i>
                         <label>Sexo </label>
                         <select name="option" type="option" id="genero" class="input-field">
-                            <option>Selecione</option>
+                            <option>Seleccionar</option>
                             <option>Masculino</option>
-                            <option>Feminino</option>
+                            <option>Femenino</option>
                             <option>Prefiero no Responder</option>
                         </select> 
                     </div>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="input-field" id="nameInput">
                         <i class="fa-solid fa-user"></i>
-                        <input type="text" id= "preguntaUno" placeholder="¿Por qué dejaste tu ultimo trabajo?" cols="10" rows="5">
+                        <input type="text" id= "preguntaUno" placeholder="¿Por qué dejaste tu último trabajo?" cols="10" rows="5">
                     </div>
                     <div class="input-field" id="nameInput">
                         <i class="fa-solid fa-user"></i>
@@ -121,9 +121,9 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-user"></i>
-                        <label>¿Cual es mejor para tí? </label>
+                        <label>¿Cuál es mejor para tí? </label>
                         <select name="option" type="option" id=" opcionC" class="input-field">
-                            <option>Selecione</option>
+                            <option>Seleccionar</option>
                             <option>Trabajo en equipo</option>
                             <option>Iniciativa</option>
                             <option>Toma de decisiones</option>
@@ -136,9 +136,9 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-user"></i>
-                        <label>¿Nivel de ingles? </label>
+                        <label>¿Nivel de inglés? </label>
                         <select name="option" type="option" id="opcionIngles" class="input-field">
-                            <option>Selecione</option>
+                            <option>Seleccionar</option>
                             <option>Básico</option>
                             <option>Intermedio</option>
                             <option>Avanzado</option>    
@@ -148,7 +148,7 @@
                         <i class="fa-solid fa-user"></i>
                         <label>¿Cómo prefieres comunicarte? </label>
                         <select name="option" type="option" id=  "opcionComunicacion" class="input-field">
-                            <option>Selecione</option>
+                            <option>Seleccionar</option>
                             <option>Reuniones frecuentes en persona</option>
                             <option>Comunicación por correo electrónico</option>
                             <option>Plataforma de gestión de proyectos en línea</option>
@@ -163,7 +163,7 @@
                         <i class="fa-solid fa-user"></i>
                         <label>¿Cultura empresarial que prefieres? </label>
                         <select name="option" type="option" id="preguntaPrefieres" class="input-field">
-                            <option>Selecione</option>
+                            <option>Seleccionar</option>
                             <option>Innovadora y creativa</option>
                             <option>Estructurada y orientada a procesos</option>
                             <option>Colaborativa y orientada al equipo</option>
